deployments/kubernetes/manifests/deployment.yaml
---
# Source: forecastle/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    configmap.fabric8.io/update-on-change: "keycloak-proxy"
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "0.0.8"
    chart: "forecastle-0.0.8"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: forecastle
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      labels:
        app: forecastle
        group: com.stakater.platform
        provider: stakater
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: "stakater/forecastle:0.0.8"
        name: forecastle
        volumeMounts:
        - name: forecastle-config
          mountPath: /etc/cp-config      
      volumes:      
      - name: forecastle-config
        configMap: 
          name: forecastle
      serviceAccountName: forecastle
