deployments/kubernetes/manifests/service.yaml
---
# Source: forecastle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "v1.0.49"
    chart: "forecastle-v1.0.49"
    release: "forecastle"
    heritage: "Tiller"
    expose: "false"
  name: forecastle
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
