deployments/kubernetes/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forecastle-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: forecastle.213.165.229.112.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forecastle
            port:
              number: 8080
